src/test/ui/issues/40000-49999/issue-43926.stderr
error: `cfg()` must have an argument
  --> $DIR/issue-43926.rs:1:20
   |
LL | #[link(name="foo", cfg())]
   |                    ^^^^^

error: aborting due to previous error

