src/test/ui/issues/40000-49999/issue-43926.rs
#[link(name="foo", cfg())] //~ ERROR `cfg()` must have an argument
extern {}

fn main() {}
